bug: fix spacing bug on mobile safari
notes: tested on chrome mobile preview but actual mobile safari is having an overflow issue

--- a/src/features/menu/components/MenuNav/MenuNav.module.css
+++ b/src/features/menu/components/MenuNav/MenuNav.module.css
@@ -2,7 +2,7 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	padding: 0 1em;
+	padding: 0 0.5em;
 }
 
 .menu-links-ul {
@@ -26,4 +26,13 @@
 
 .icon-active {
 	fill: var(--md-sys-color-primary);
+}
+
+@media (min-width: 769px) {
+	.nav {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		padding: 0 1em;
+	}
 }
