--- a/src/pages/Menu/Menu.module.css
+++ b/src/pages/Menu/Menu.module.css
@@ -4,7 +4,7 @@
 	flex-direction: row;
 	position: relative;
 	align-items: center;
-	gap: 8px;
+	gap: 0px;
 	top: 10vh;
 	margin-top: 64px;
 }
